fix overflow img's

--- a/comps/_pages/_home/2_projects.scss
+++ b/comps/_pages/_home/2_projects.scss
@@ -92,10 +92,11 @@ section#projects {
 
       img {
         border-radius: $rad;
-        width: 100%;
+
+        @media (max-width: #{$xl}) { width: 100%; }
         @include xl {
           height: 700px;
-          width: auto;
+          max: auto !important;
         }
       }
     }
