--- a/css/partials/_reset.scss
+++ b/css/partials/_reset.scss
@@ -44,10 +44,10 @@ ul {
 // ==============================================
 
 // make media elements responsive
-img, picture, svg, video {
-  display: block;
-  max-width: 100%;
-}
+// img, picture, svg, video {
+//   display: block;
+//   max-width: 100%;
+// }
 
 // ==============================================
 
